# PG_simple_2D_vector_graphics

./: CMakeLists.txt  README.md
src/: ImageViewer.cpp  ImageViewer.h  ImageViewer.qrc  ImageViewer.ui  NewImageDialog.h  NewImgDialog.ui  Object2D.cpp  Object2D.h  ViewerWidget.cpp  ViewerWidget.h
